# compotime

./: .gitignore  .pre-commit-config.yaml  Compositional time series.ipynb  LICENSE  Makefile  README.md  flake.nix  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  dependabot-automerge.yml  publish.yml  test.yml  update_docs.yml
compotime/: __init__.py  _models.py  errors.py  models.py  preprocess.py
docs/: Makefile  symlink_examples.sh
docs/source/: api.rst  conf.py  index.rst  user_guide.rst
docs/source/_templates/: custom-module-template.rst
docs/source/examples/: Compositional time series.ipynb  example.ipynb
examples/: Compositional time series.ipynb  Compositional time series_nan.ipynb  example.ipynb
examples/data/: april.csv  august.csv  dbrf.csv  december.csv  february.csv  january.csv  july.csv  june.csv  march.csv  may.csv  november.csv  october.csv  proglangpop.csv  proglangpop_sample.csv  september.csv  share_energy_source.csv  tv_viewership.csv
tests/: __init__.py  _utils.py  test_models.py  test_preprocess.py  test_state_space.py
