[tool.poetry]
name = "compotime"
version = "0.1.0"
description = "A package for compositional time series"
authors = ["Jaume Mateu"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.24.2"
pandas = "^2.0.2"
scipy = "^1.10.1"
typing-extensions = "^4.6.3"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.274"
pytest = "^7.4.0"
hypothesis = "^6.80.1"
ipython = "^8.14.0"
jupyterlab = "^4.0.1"
matplotlib = "^3.7.1"
docformatter = "^1.7.3"
isort = "^5.12.0"
pre-commit = "^3.3.2"

[tool.ruff]
line-length = 100
select = [
    "F", "E", "W", "I", "N", "D", "UP", "YTT", "ANN", "S", "BLE", "FBT", "B", "A", "COM", 
    "C4", "DTZ", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE",
    "RET", "SLF", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "NPY",
    "RUF"
]
ignore = ["ANN101", "ANN102", "S101", "D203", "D213"]
cache-dir = ".ruff_cache"
target-version = "py39"

[tool.ruff.pylint]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.pep8-naming]
ignore-names = ["F", "X_last", "X_prev", "X_zero"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["ANN201", "SLF001", "EXE002"]
"compotime/*.py" = ["EXE002"]


[tool.black]
line-length = 100
target-version = ["py39"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
