[tool.poetry]
name = "compotime"
version = "0.2.0"
description = "A library for forecasting compositional time series"
authors = ["Jaume Mateu", "Eduard Serrahima"]
maintainers = ["Jaume Mateu"]
readme = "README.md"
documentation = "https://mateuja.github.io/compotime/"

[tool.poetry.dependencies]
numpy = "^1.25.1"
pandas = "^2.0.2"
python = ">=3.9,<3.12"
scipy = "^1.10.1"
typing-extensions = "^4.6.3"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.7.0"}
docformatter = "^1.7.5"
hypothesis = "^6.82.0"
ipython = "^8.14.0"
isort = "^5.12.0"
jupyterlab = "^4.0.3"
matplotlib = "^3.7.1"
pre-commit = "^3.3.2"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.3.1"
ruff = ">=0.0.278,<0.0.281"

[tool.poetry.group.docs.dependencies]
nbsphinx = "^0.9.2"
pydata-sphinx-theme = "^0.13.3"
sphinx = "^7.0.1"

[tool.ruff]
line-length = 100
select = [
    "F", "E", "W", "I", "N", "D", "UP", "YTT", "ANN", "S", "BLE", "FBT", "B", "A", "COM", 
    "C4", "DTZ", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE",
    "RET", "SLF", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "NPY",
    "RUF"
]
ignore = ["ANN101", "ANN102", "S101", "D203", "D213", "TRY003"]
cache-dir = ".ruff_cache"
target-version = "py39"

[tool.ruff.pylint]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.pep8-naming]
ignore-names = ["F", "X_last", "X_prev", "X_zero"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["ANN201", "SLF001", "EXE002"]
"compotime/*.py" = ["EXE002"]

[tool.black]
line-length = 100
target-version = ["py39"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


